force-app/src/objects/proh__File__c.object
<CustomObject>
    <fields>
        <fullName>proh__Chatter_Feed_Item__c</fullName>
        <description>Originating Chatter Feed Item where the file is posted</description>
        <label>Chatter Feed Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Failed_Elements__c</fullName>
        <label>Failed Elements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proh__File_Type__c</fullName>
        <label>File Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Format__c</fullName>
        <label>Format</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Group_Identifier__c</fullName>
        <label>Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Hashcode__c</fullName>
        <label>Hashcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Narrative__c</fullName>
        <label>Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>proh__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>proh__File__c</referenceTo>
        <relationshipLabel>PaymentHub Files</relationshipLabel>
        <relationshipName>PaymentHub_Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>proh__ProcessingHub_Id__c</fullName>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Source__c</fullName>
        <description>Indicator of the source of the filer. Values can be “Chatter”, “PaymentHub” or the name of a third party/channel.</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proh__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Recognized</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Not supported</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>In transit</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Processed with errors</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partially Rejected</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>proh__Successful_Elements__c</fullName>
        <label>Successful Elements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proh__Total_Record_Amount__c</fullName>
        <description>Total record amount of the file.</description>
        <inlineHelpText>Total record amount of the file.</inlineHelpText>
        <label>Total Record Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>proh__Total_Record_Count__c</fullName>
        <description>Total record count of the file.</description>
        <inlineHelpText>Total record count of the file.</inlineHelpText>
        <label>Total Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proh__Total_elements__c</fullName>
        <label>Total elements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proh__Unique_File_Reference__c</fullName>
        <label>Unique File Reference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>PaymentHub File</label>
    <listViews>
        <fullName>proh__All</fullName>
        <columns>NAME</columns>
        <columns>proh__Chatter_Feed_Item__c</columns>
        <columns>proh__Filename__c</columns>
        <columns>proh__Format__c</columns>
        <columns>proh__File_Type__c</columns>
        <columns>proh__Status__c</columns>
        <columns>proh__Total_elements__c</columns>
        <columns>proh__Successful_Elements__c</columns>
        <columns>proh__Failed_Elements__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FL-{0}</displayFormat>
        <label>PaymentHub File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PaymentHub Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>